# Parser_Generator

./: CFG_Generator.cpp  CFG_Generator.h  CMakeLists.txt  ParseTableGenerator.cpp  ParseTableGenerator.h  README.md  Simulator.cpp  Simulator.h  main.cpp
models/: CFG.cpp  CFG.h  ParsingTable.cpp  ParsingTable.h  Production.cpp  Production.h
testFiles/: input.txt  test.txt
tests/: grammar modified.txt  test1.txt
